# libreoffice-sdk

./: .gitmodules  CMakeLists.txt
npm/: packages.json
src/: cell.h  index.cpp  utils.h  workbook.h  worksheet.h
tests/: index.html
